--- a/main.html
+++ b/main.html
@@ -4,6 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RocketLaunch Tech - Головна</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        header {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 10;
+        }
+
+        .mission {
+            margin: 0;
+            padding: 30px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid #ffffff;
+        }
+
+        #founders-table {
+            transition: transform 0.3s ease;
+        }
+
+        #founders-table:hover {
+            transform: translateX(2%);
+        }
+
+        footer::selection {
+            background-color: hsl(200, 100%, 60%);
+            color: #000000;
+            text-decoration: underline;
+        }
+
+        .mission-content {
+            max-height: 300px;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
+
+        .mission-content::after {
+            content: "🚀";
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -20,25 +62,26 @@
     </nav>
 
     <main>
-        <article>
-            <h2>Мета створення RocketLaunch Tech</h2>
-            <p>Наша мета - <span style="color: dodgerblue"><b><i>революціонізувати</i></b></span> космічні запуски,
-                роблячи їх <span style="color: blueviolet"><em>доступними</em></span> та
-                <span style="color: blueviolet"><em>ефективними</em></span> для комерційних і наукових місій.</p>
-            <p>Ми фокусуємося на розробці <span style="color: dodgerblue"><b>інноваційних</b></span> ракетних технологій для доставлення вантажів на орбіту.</p>
-            <p>Для досягнення цієї мети ми ставимо перед собою такі завдання:</p>
-            <ul>
-                <li>Розробка багаторазових ракетних систем для зменшення витрат на запуски.</li>
-                <li>Інтеграція штучного інтелекту для оптимізації траєкторій польотів.</li>
-                <li>Співпраця з міжнародними партнерами для спільних космічних проєктів.</li>
-                <li>Проведення тестів на екологічність палива для зменшення впливу на довкілля.</li>
-            </ul>
+        <article class="mission">
+            <div class="mission-content">
+                <h2>Мета створення RocketLaunch Tech</h2>
+                <p>Наша мета - революціонізувати космічні запуски,
+                    роблячи їх доступними та ефективними для комерційних і наукових місій.</p>
+                <p>Ми фокусуємося на розробці інноваційних ракетних технологій для доставлення вантажів на орбіту.</p>
+                <p>Для досягнення цієї мети ми ставимо перед собою такі завдання:</p>
+                <ul>
+                    <li>Розробка багаторазових ракетних систем для зменшення витрат на запуски.</li>
+                    <li>Інтеграція штучного інтелекту для оптимізації траєкторій польотів.</li>
+                    <li>Співпраця з міжнародними партнерами для спільних космічних проєктів.</li>
+                    <li>Проведення тестів на екологічність палива для зменшення впливу на довкілля.</li>
+                </ul>
+            </div>
         </article>
 
         <article>
             <h2>Інформація про засновників</h2>
-            <table border="1">
-                <caption>Засновники <span style="color: darkblue"><b>RocketLaunch Tech</b></span></caption>
+            <table id="founders-table" border="1">
+                <caption>Засновники RocketLaunch Tech</caption>
                 <thead>
                     <tr>
                         <th>Ім'я</th>
@@ -107,12 +150,9 @@
 
         <p>Ми пишаємося нашими досягненнями в <span style="color: darkviolet;">
             <u>запусках ракет у космос</u></span>, де інновації зустрічаються з реальністю.</p>
-
-        <p><button type="button">Перейти у власний кабінет</button></p>
-        <p><button type="button">Зареєструватись</button></p>
     </main>
 
-    <aside>
+    <aside class="contact-info">
         <h3>Посилання на сайти партнерів:</h3>
         <a href="https://www.nasa.gov" class="button">Відвідати NASA</a>
         <a href="https://www.spacex.com" class="button">Відвідати SpaceX</a>
