update logo, header

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,20 @@
         }
 
         article.our_projects {
-            margin-top: 320px;
+            margin-top: 325px;
+            max-width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .projects-header {
+            margin-bottom: 20px;
+        }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
         }
 
         section.project {
@@ -70,101 +83,104 @@
 
     <main>
         <article class="our_projects">
-            <h2>Наші проєкти</h2>
-            <p>Нижче представлено список наших ключових проєктів у сфері космічних запусків.</p>
-            <p>Кожен проєкт демонструє наші інноваційні підходи до розробки ракетних технологій.</p>
+            <div class="projects-header">
+                <h2>Наші проєкти</h2>
+                <p>Нижче представлено список наших ключових проєктів у сфері космічних запусків.</p>
+                <p>Кожен проєкт демонструє наші інноваційні підходи до розробки ракетних технологій.</p>
+            </div>
+            <div class="projects-grid">
+                <section class="project">
+                    <h3>Falcon 9</h3>
+                    <img src="falcon9.png" alt="Ракета Falcon 9" width="500">
+                    <p><b>Країна:</b> США</p>
+                    <p><b>Основні характеристики:</b></p>
+                    <ul>
+                        <li>Вантажопідйомність: 22 800 кг на низьку навколоземну орбіту.</li>
+                        <li>Тип палива: Рідкий кисень і гас (RP-1).</li>
+                        <li>Висота ракети: 70 м.</li>
+                        <li>Технологія: Багаторазова перша ступінь з можливістю посадки.</li>
+                        <li>Статус: Активно використовується для комерційних і наукових місій.</li>
+                    </ul>
+                </section>
 
-            <section class="project">
-                <h3>Falcon 9</h3>
-                <img src="falcon9.png" alt="Ракета Falcon 9" width="500">
-                <p><b>Країна:</b> США</p>
-                <p><b>Основні характеристики:</b></p>
-                <ul>
-                    <li>Вантажопідйомність: 22 800 кг на низьку навколоземну орбіту.</li>
-                    <li>Тип палива: Рідкий кисень і гас (RP-1).</li>
-                    <li>Висота ракети: 70 м.</li>
-                    <li>Технологія: Багаторазова перша ступінь з можливістю посадки.</li>
-                    <li>Статус: Активно використовується для комерційних і наукових місій.</li>
-                </ul>
-            </section>
+                <section class="project">
+                    <h3>Starship</h3>
+                    <img src="starship.png" alt="Ракета Starship" width="250">
+                    <p><b>Країна:</b> США</p>
+                    <p><b>Основні характеристики:</b></p>
+                    <ul>
+                        <li>Вантажопідйомність: 150 000 кг на низьку навколоземну орбіту.</li>
+                        <li>Тип палива: Рідкий метан і рідкий кисень.</li>
+                        <li>Висота ракети: 120 м.</li>
+                        <li>Технологія: Повністю багаторазова система для міжпланетних польотів.</li>
+                        <li>Статус: У стадії тестування.</li>
+                    </ul>
+                </section>
 
-            <section class="project">
-                <h3>Starship</h3>
-                <img src="starship.png" alt="Ракета Starship" width="250">
-                <p><b>Країна:</b> США</p>
-                <p><b>Основні характеристики:</b></p>
-                <ul>
-                    <li>Вантажопідйомність: 150 000 кг на низьку навколоземну орбіту.</li>
-                    <li>Тип палива: Рідкий метан і рідкий кисень.</li>
-                    <li>Висота ракети: 120 м.</li>
-                    <li>Технологія: Повністю багаторазова система для міжпланетних польотів.</li>
-                    <li>Статус: У стадії тестування.</li>
-                </ul>
-            </section>
+                <section class="project">
+                    <h3>Ariane 6</h3>
+                    <img src="ariane6.png" alt="Ракета Ariane 6" width="500">
+                    <p><b>Країна:</b> Європа (Франція)</p>
+                    <p><b>Основні характеристики:</b></p>
+                    <ul>
+                        <li>Вантажопідйомність: 21 650 кг на низьку навколоземну орбіту.</li>
+                        <li>Тип палива: Рідкий водень і рідкий кисень.</li>
+                        <li>Висота ракети: 63 м.</li>
+                        <li>Технологія: Модульна конструкція для різних типів місій.</li>
+                        <li>Статус: Перший запуск відбувся у 2024 році.</li>
+                    </ul>
+                </section>
 
-            <section class="project">
-                <h3>Ariane 6</h3>
-                <img src="ariane6.png" alt="Ракета Ariane 6" width="500">
-                <p><b>Країна:</b> Європа (Франція)</p>
-                <p><b>Основні характеристики:</b></p>
-                <ul>
-                    <li>Вантажопідйомність: 21 650 кг на низьку навколоземну орбіту.</li>
-                    <li>Тип палива: Рідкий водень і рідкий кисень.</li>
-                    <li>Висота ракети: 63 м.</li>
-                    <li>Технологія: Модульна конструкція для різних типів місій.</li>
-                    <li>Статус: Перший запуск відбувся у 2024 році.</li>
-                </ul>
-            </section>
+                <section class="project">
+                    <h3>Electron</h3>
+                    <img src="electron.png" alt="Ракета Electron" width="250">
+                    <p><b>Країна:</b> Нова Зеландія/США</p>
+                    <p><b>Основні характеристики:</b></p>
+                    <ul>
+                        <li>Вантажопідйомність: 300 кг на низьку навколоземну орбіту.</li>
+                        <li>Тип палива: Рідкий кисень і гас (RP-1).</li>
+                        <li>Висота ракети: 18 м.</li>
+                        <li>Технологія: Легка ракета для запуску малих супутників.</li>
+                        <li>Статус: Активно використовується.</li>
+                    </ul>
+                </section>
 
-            <section class="project">
-                <h3>Electron</h3>
-                <img src="electron.png" alt="Ракета Electron" width="250">
-                <p><b>Країна:</b> Нова Зеландія/США</p>
-                <p><b>Основні характеристики:</b></p>
-                <ul>
-                    <li>Вантажопідйомність: 300 кг на низьку навколоземну орбіту.</li>
-                    <li>Тип палива: Рідкий кисень і гас (RP-1).</li>
-                    <li>Висота ракети: 18 м.</li>
-                    <li>Технологія: Легка ракета для запуску малих супутників.</li>
-                    <li>Статус: Активно використовується.</li>
-                </ul>
-            </section>
+                <section class="project">
+                    <h3>H3</h3>
+                    <img src="h3.png" alt="Ракета H3" width="250">
+                    <p><b>Країна:</b> Японія</p>
+                    <p><b>Основні характеристики:</b></p>
+                    <ul>
+                        <li>Вантажопідйомність: 6 500 кг на геостаціонарну орбіту.</li>
+                        <li>Тип палива: Рідкий водень і рідкий кисень.</li>
+                        <li>Висота ракети: 63 м.</li>
+                        <li>Технологія: Високоефективна система для комерційних запусків.</li>
+                        <li>Статус: У стадії активного використання.</li>
+                    </ul>
+                </section>
 
-            <section class="project">
-                <h3>H3</h3>
-                <img src="h3.png" alt="Ракета H3" width="250">
-                <p><b>Країна:</b> Японія</p>
-                <p><b>Основні характеристики:</b></p>
-                <ul>
-                    <li>Вантажопідйомність: 6 500 кг на геостаціонарну орбіту.</li>
-                    <li>Тип палива: Рідкий водень і рідкий кисень.</li>
-                    <li>Висота ракети: 63 м.</li>
-                    <li>Технологія: Високоефективна система для комерційних запусків.</li>
-                    <li>Статус: У стадії активного використання.</li>
-                </ul>
-            </section>
-
-            <section class="project">
-                <h3>Zenit-3SL</h3>
-                <img src="zenit-3sl.png" alt="Ракета Zenit-3SL" width="250">
-                <p><b>Країна:</b> Україна/міжнародна співпраця</p>
-                <p><b>Основні характеристики:</b></p>
-                <ul>
-                    <li>Вантажопідйомність: 6 000 кг на геостаціонарну орбіту.</li>
-                    <li>Тип палива: Рідкий кисень і гас (RP-1).</li>
-                    <li>Висота ракети: 59.6 м.</li>
-                    <li>Технологія: Запуск із морської платформи.</li>
-                    <li>Статус: Обмежене використання через геополітичні фактори.</li>
-                </ul>
-            </section>
-
-            <a href="main.html" class="button">Повернутися на Головну</a>
+                <section class="project">
+                    <h3>Zenit-3SL</h3>
+                    <img src="zenit-3sl.png" alt="Ракета Zenit-3SL" width="250">
+                    <p><b>Країна:</b> Україна/міжнародна співпраця</p>
+                    <p><b>Основні характеристики:</b></p>
+                    <ul>
+                        <li>Вантажопідйомність: 6 000 кг на геостаціонарну орбіту.</li>
+                        <li>Тип палива: Рідкий кисень і гас (RP-1).</li>
+                        <li>Висота ракети: 59.6 м.</li>
+                        <li>Технологія: Запуск із морської платформи.</li>
+                        <li>Статус: Обмежене використання через геополітичні фактори.</li>
+                    </ul>
+                </section>
+            </div>
+            <div class="projects-footer">
+                <a href="main.html" class="button">Повернутися на Головну</a>
+            </div>
         </article>
     </main>
 
     <footer>
         <p>&copy; 2025 RocketLaunch Tech. Всі права захищено.</p>
     </footer>
-
 </body>
 </html>
