--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         }
 
         article.our_projects {
-            margin-top: 325px;
+            margin-top: 125px;
             max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
@@ -52,7 +52,10 @@
         }
 
         section.project img {
-            max-width: 100%;
+            width: 100%;
+            height: 250px;
+            object-fit: contain;
+            border-radius: 8px;
             transition: filter 0.5s ease;
         }
 
