add JavaScripts, update html and css files

--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
             flex-flow: column nowrap;
             justify-content: center;
             align-items: flex-start;
-            max-width: 800px;
+            max-width: 550px;
             margin: 0 auto;
         }
 
@@ -88,8 +88,10 @@
 </head>
 <body>
     <header>
-        <h1>RocketLaunch Tech</h1>
-        <img src="logo-placeholder.png" alt="Логотип RocketLaunch Tech" width="200">
+        <div class="branding">
+            <img src="logo-placeholder.png" alt="Логотип RocketLaunch Tech" width="200">
+            <h1>RocketLaunch Tech</h1>
+        </div>
     </header>
 
     <nav>
@@ -172,5 +174,7 @@
     <footer>
         <p>&copy; 2025 RocketLaunch Tech. Всі права захищено.</p>
     </footer>
+
+<script src="scripts.js"></script>
 </body>
 </html>
