update modal window, founder photo

--- a/main.html
+++ b/main.html
@@ -82,11 +82,11 @@
             <section id="founder">
                <h3>Засновник компанії</h3>
                <img
-                 src="founder.jpeg"
+                 src="founder.jpg"
                    alt="Фото засновника Івана Петренка"
                   id="founder-photo"
                   class="founder-photo">
-               <p><strong>Скрудж МакДак</strong> — засновник та генеральний директор RocketLaunch Tech.</p>
+               <p><strong>Іван Петренко</strong> — засновник та генеральний директор RocketLaunch Tech.</p>
             </section>
 
           <table id="founders-table" border="1">
@@ -163,5 +163,15 @@
     </footer>
 
 <script src="scripts.js"></script>
+<div id="riddle-modal-overlay">
+    <div id="riddle-modal">
+        <span class="close-btn">&times;</span>
+        <h3>Загадка від Івана Петренка</h3>
+        <p id="riddle-text">Я вириваюсь із Землі, щоб не впасти назад. Мене створюють люди, щоб дістатись зірок. Хто я?</p>
+        <input type="text" id="riddle-answer-input" placeholder="Введіть Вашу відповідь тут">
+        <button id="riddle-check-btn">Перевірити</button>
+        <p id="riddle-feedback" class="feedback-text"></p>
+    </div>
+</div>
 </body>
 </html>
